--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - 3.8.5
 install:
-  - pip instal -r requirements-dev.txt
+  - pip instal -q -r requirements-dev.txt
 script:
   - flake8
