--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: python
 python:
   - 3.8
 install:
-  - pip install -q -r requirements-dev.txt
+  - pip install -q -r requirements-dev.txt codecov
 script:
   - flake8
-  - pytest libpythonpro_doug
+  - pytest libpythonpro_doug --cov=libpythonpro_doug
+after_success:
+  - codecov
+
